--- a/src/main/resources/assets/copyworld/lang/de_de.json
+++ b/src/main/resources/assets/copyworld/lang/de_de.json
@@ -3,5 +3,5 @@
   "selectWorld.edit.copyFailed": "Kopie hat fehlgeschlagen",
   "selectWorld.edit.copySummaryFailed": "Keine Weltinformation war gefunden",
   "selectWorld.edit.copySuccess": "Welt hat kopiert!",
-  "selectWorld.edit.copySuccessDetails": "Hat die Welt erfolgreich %s kopiert"
+  "selectWorld.edit.copySuccessDetails": "Hat die Welt %s erfolgreich kopiert"
 }
